--- a/sitio/views/index.ejs
+++ b/sitio/views/index.ejs
@@ -71,7 +71,7 @@
 
 
 
-                                    <a href="/products/detail/<%= products.id %>" class="myButton">Ver Mas</a>
+                                    <a href="/products/detail/<%= product.id %>" class="myButton">Ver Mas</a>
                                 </div>
 
                             </article>
@@ -117,7 +117,7 @@
 
 
 
-                                    <a href="/products/detail/<%= products.id %>" class="myButton">Ver Mas</a>
+                                    <a href="/products/detail/<%= product.id %>" class="myButton">Ver Mas</a>
                                 </div>
 
                             </article>
@@ -163,7 +163,7 @@
 
 
 
-                                    <a href="/products/detail/<%= products.id %>" class="myButton">Ver Mas</a>
+                                    <a href="/products/detail/<%= product.id %>" class="myButton">Ver Mas</a>
                                 </div>
 
                             </article>
@@ -209,7 +209,7 @@
 
 
 
-                                    <a href="/products/detail/<%= products.id %>" class="myButton">Ver Mas</a>
+                                    <a href="/products/detail/<%= product.id %>" class="myButton">Ver Mas</a>
                                 </div>
 
                             </article>
