implementa registro-usuarios

--- a/sitio/views/register.ejs
+++ b/sitio/views/register.ejs
@@ -13,7 +13,7 @@
             <form action="" method="POST">
                 <div class="box-form">
                     <label class="nombreCompleto" for="nombre">Nombre y apellido</label>
-                    <input type="text" id="nombre" name="nombre">
+                    <input type="text" id="nombre" name="name">
                 </div>
                 <div class="box-form">
                     <label class="email" for="email">Email</label>
@@ -26,6 +26,10 @@
                 <div class="box-form">
                     <label for="pass">Contraseña</label>
                     <input type="password" id="pass" name="password">
+                </div>
+                <div class="box-form">
+                    <label for="password">Confirmar contraseña</label>
+                    <input type="password" id="password2" name="password2">
                 </div>
                 <div class="registrarse">
                     <button type="submit">registrarse</button>
