--- a/sitio/public/stylesheets/register.css
+++ b/sitio/public/stylesheets/register.css
@@ -34,7 +34,7 @@
 .register main .formulario .box-form{
     display: flex;
     flex-direction: column;
-    margin: 27px 0;
+    margin: 10px 0;
     padding: 0 9%;
 }
 
@@ -46,6 +46,11 @@
     margin: 0 0 2px 10px;
 }
 
+.register main .formulario .box-form span{
+    font-size: 12px;
+    color: #920b0b;
+    margin: 10px 10px;
+}
 
 /*seccion para rellenar*/
 .register main .formulario .box-form input{
@@ -67,6 +72,7 @@
     margin: 7px auto;
     text-transform: uppercase;
     padding: 5px 8px;
+    border-radius: 50px;
     display: block;
 }
 
@@ -106,7 +112,7 @@
 
     /* caja de formulario */
     .register main .formulario .box-form{
-        margin: 35px 0;
+        margin: 15px 0;
     }
     
 
@@ -128,7 +134,6 @@
 
     /*boton registrarse*/
     .register main .formulario .registrarse button{
-        border-radius: 12%;
         width: unset;
         height: 29px;
         font-size: 15px;
@@ -164,7 +169,7 @@
 
     /* caja de formulario */
     .register main .formulario .box-form{
-        margin: 40px 0;
+        margin: 20px 0;
         padding: 0 5%;
     }
     
@@ -182,6 +187,10 @@
         height: 40px;
     }
 
+    .register main .formulario .box-form span {
+        font-size: 14px;
+        margin: 10px 40px;
+    }
 
 /* derivacion a inicio de sesion*/
     .register main .iniciar-sesion{
