--- a/sitio/views/register.ejs
+++ b/sitio/views/register.ejs
@@ -14,22 +14,27 @@
                 <div class="box-form">
                     <label class="nombreCompleto" for="nombre">Nombre y apellido</label>
                     <input type="text" id="nombre" name="name">
+                    <span class= "error"><%= locals.errores && errores.name ? errores.name.msg : null %></span>
                 </div>
                 <div class="box-form">
                     <label class="email" for="email">Email</label>
                     <input type="email" id="email" name="email">
+                    <span class= "error"><%= locals.errores && errores.email ? errores.email.msg : null %></span>
                 </div>
                 <div class="box-form">
                     <label class="telefono" for="telefono">telefono</label>
                     <input type="tel" id="telefono" name="telefono">
+                    <span class= "error"><%= locals.errores && errores.telefono ? errores.telefono.msg : null %></span>
                 </div>
                 <div class="box-form">
                     <label for="pass">Contraseña</label>
                     <input type="password" id="pass" name="password">
+                    <span class= "error"><%= locals.errores && errores.password ? errores.password.msg : null %></span>
                 </div>
                 <div class="box-form">
                     <label for="password">Confirmar contraseña</label>
                     <input type="password" id="password2" name="password2">
+                    <span class= "error"><%= locals.errores && errores.password2 ? errores.password2.msg : null %></span>
                 </div>
                 <div class="registrarse">
                     <button type="submit">registrarse</button>
