--- a/sitio/views/login.ejs
+++ b/sitio/views/login.ejs
@@ -12,6 +12,10 @@
         <div class="formulario">
             <p>Inicio de sesión</p>
             <form action="" method="POST">
+                
+                <div class="conteiner-error">
+                    <span class= "error"><%= locals.errores && errores.email ? errores.email.msg : null %></span>
+                </div>
                 <div class="box-form">
                     <label class="email" for="email">Email</label>
                     <input type="email" placeholder="" id="email" name="email">
@@ -20,9 +24,8 @@
                     <label for="pass">Contraseña</label>
                     <input type="password" placeholder="" id="pass" name="password">
                 </div>
-                <div class="iniciar-ayuda">
+                <div class="iniciar">
                     <button type="submit">Iniciar sesión</button>
-                    <a href="">¿Olvidaste tu contraseña?</a>
                 </div>
             </form>
         </div>
