--- a/sitio/public/stylesheets/header.css
+++ b/sitio/public/stylesheets/header.css
@@ -75,15 +75,19 @@ header div nav ul li a{
     text-transform: uppercase;
     font-weight: bold;
 }
-header nav ul.login-bar{
+
+header div nav ul li a i{
+    padding: 0 3px;
+}
+
+
+
+/*header nav ul.login-bar{
     display: flex;
     flex-direction: row;
     width: 80%;
     justify-content: space-between;
-}
-header div nav ul.login-bar li a i{
-    padding: 0 3px;
-}
+}*/
 
 /*Parte inferior del header: menu hamburguesa*/
 header div.caja-inferior{
@@ -141,6 +145,54 @@ header div div.burger-menu{
     header div nav ul.navbar li{
         display: block;
     }
+
+    /*perfil del usuario*/
+    
+ 
+    header  header div nav ul.login-bar{
+        display: flex;
+        justify-content: space-between;
+    }
+
+
+    header div nav ul.login-bar .container-perfil{
+        display: flex;
+        padding: 0px 20px;
+    }
+
+    header div nav ul.login-bar .img-perfil{
+        width: 20px;
+        height: 20px;
+        margin-right: 15px;
+    }
+
+    header div nav ul.login-bar .sub-menu{
+        background-color: #fff;
+        box-shadow: 3px 4px 3px rgba(0, 0, 0, 0.1);
+        display: none;
+        position: absolute;
+        z-index: 1000;
+        right: 31px;
+    }
+    
+    header div nav ul.login-bar .sub-menu li{
+        transition: all 500ms ;
+    }
+
+    header div nav ul.login-bar .sub-menu li:hover{
+        background-color: #c4c4c4;
+    }
+
+
+    header div nav ul.login-bar .sub-menu li a{
+        line-height: 30px;
+        width: 100%;
+    }
+    
+    header div nav ul.login-bar li a:hover + ul,  header div nav ul.login-bar .sub-menu:hover{
+        display: block;
+    }
+
     header div nav ul.login-bar{
         width: 35%;
         display: flex;
@@ -162,7 +214,14 @@ header div div.burger-menu{
     header div nav ul.navbar {
         width: 40%;
     }
-    header div nav ul.login-bar {
-        width: 30%;
+    
+    /*perfil del usuario*/
+    header div nav ul.login-bar .sub-menu{
+        right: 92px;
+        width: 134px;
     }
+    
+    /*header div nav ul.login-bar {
+        width: 30%;
+    }*/
 }
