--- a/sitio/views/partials/header.ejs
+++ b/sitio/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <header>
     <div class="caja-superior">
         <a href="/"><img src="/img/Logo.png" alt=""></a>
-        <div class="search" >
+        <div class="search">
             <input placeholder=" Buscar... " type="search">
             <i class="fas fa-search"></i>
         </div>
@@ -10,14 +10,44 @@
                 <li><a href="/">Inicio</a></li>
                 <li><a href="/products">Productos</a></li>
                 <li><a href="">Preguntas frecuentes</a></li>
-                <li><a href="">Contacto</a></li>
-            </ul>
-            <ul class="login-bar">
-                <li><a href="/users/register"><i class="far fa-id-card"></i> Registrate </a>
-                <li><a href="/users/login"><i class="fas fa-user-circle"></i> Iniciar sesión </a>
                 <li><a href="/products/cart"><i class="fas fa-shopping-cart"></i></a>
-                <li><a href="/admin"><i class="far fa-user-circle"></i> Administrador </a>
             </ul>
+
+            <ul class="login-bar">
+                <% if (locals.userLogin) { %>
+                    <li >
+                        <a class="perfil" href="#">
+                            <di class="container-perfil">
+                                <div class="img-perfil">
+                                    <img src="/img/users/<%= locals.userLogin.avatar %>" alt="">
+                                </div>
+
+
+                                <%= locals.userLogin.name %>
+
+                                    <i class="fas fa-caret-down"></i>
+                            </di>
+
+                        </a>
+                        <ul class="sub-menu">
+                            <li>
+                                <a href=""><i class="fas fa-user-alt"></i>Mi perfil</a>
+                            </li>
+                            <% if (locals.userLogin.rol==='admin' ) { %>
+                                <li><a href="/admin"><i class="far fa-user-circle"></i> Administrador </a>
+                                    <% } %>
+                                <li>
+                                    <a href="/users/logout"><i class="fas fa-sign-out-alt"></i>Cerrar sesión</a>
+                                </li>
+                        </ul>
+                    </li>
+                <% } else { %>
+                        <li><a href="/users/register"><i class="far fa-id-card"></i> Registrate </a>
+                        <li><a href="/users/login"><i class="fas fa-user-circle"></i> Iniciar sesión </a>
+                <% } %>
+
+            </ul>
+
         </nav>
     </div>
     <div class="caja-inferior">
