--- a/sitio/public/stylesheets/header.css
+++ b/sitio/public/stylesheets/header.css
@@ -160,10 +160,11 @@ header div div.burger-menu{
         padding: 0px 20px;
     }
 
-    header div nav ul.login-bar .img-perfil{
+    header div nav ul.login-bar img{
         width: 20px;
         height: 20px;
         margin-right: 15px;
+        border-radius: 50%;
     }
 
     header div nav ul.login-bar .sub-menu{
