--- a/sitio/public/stylesheets/home.css
+++ b/sitio/public/stylesheets/home.css
@@ -2,9 +2,15 @@
 
 
 
-
 .home {
   background-color: #ffffff;
+}
+.home a{ 
+  text-decoration: none;
+  transition: all 0.2s;
+}
+.home a:hover {
+  color: var(--GrisMedio); 
 }
 
 .home h1{
@@ -12,10 +18,20 @@
   width: 100%;
   font-size: 23px;
   margin: 32px 27px 31px;
+  width: 90%;
 }
 .product-card {
   width: auto;
-  height: 450px;
+  height: 380px;
+  border-radius: 8px; 
+  box-shadow:  0 2px 2px rgba(0,0,0,0.35);
+  overflow: hidden;
+  margin: 20px;
+ 
+}
+.product-card-products{
+  width: auto;
+  height: 520px;
   border-radius: 8px; 
   box-shadow:  0 2px 2px rgba(0,0,0,0.35);
   overflow: hidden;
@@ -25,16 +41,19 @@
 
 .product-card img {
   width: 100%;
-  height: 50%;
+  height: 70%;
 }
- 
+.product-card-products img {
+  width: 100%;
+  height: 60%;
+}
+
 .contenedor-precio-descuento {
-  padding: 15px;
   position: relative;
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 35px;
   justify-content: space-between;
+  margin-left: 15px;
 }
 .precio {
   width: 30%;
@@ -52,12 +71,26 @@
 
 }
 
-
-
 .home p {
   font-size: 14px;
+  font-weight: bold;
 }
- 
+.home h2.products{
+  font-size: 14px;
+  font-weight: bold;
+  color: #000000;
+}
+.home p.precio-products{
+  font-size: 14px;
+  font-weight: bold;
+  color: #000000;
+}
+.home p.descuento-products{
+  font-size: 14px;
+  font-weight: bold;
+  color: #27b81a;
+}
+
  p.precio b {
   font-size: 14px;
   font-weight: bold;
@@ -70,15 +103,22 @@
 
 .home main .detail-product h4 {
   font-size: 18px;
+  text-align: center;
+}
+.home main .detail-product h4.products {
+  font-size: 18px;
+  text-align: center;
+  color: #000000;
+  margin-top: 5px;
 }
 
 .home main .detail-product h5 {
   font-size: 12px;
- 
- padding:  10px 20px 5px 0px;
+ padding:  5px;
   opacity: .5;
   width: 100%;
   height: 80px;
+  color: var(--GrisMedio);
 }
 
 .home .precio span {
@@ -103,40 +143,67 @@
 }
 .home main article .detail-product {
   border-top: 1px solid #ebebeb;
-  padding: 15px;
+  padding: 5px;
 }
  
 .home nav ul {
   display: none;
+  padding-left: 0;
 }
 
 .detalle-producto {
   margin: 5%;  
   width: 90%;  
 }
+.home div.box-botones{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+}
 
-
-.myButton {
- display:inline-block;
+.myButton1 {
  background-color:#ffb8a1;
-  padding:0.3em 1.2em;
-  margin:0 0.1em 0.1em 0;
-  border:0.16em solid rgba(255,255,255,0);
-  border-radius:2em;
-  box-sizing: border-box;
-  text-decoration:none;
-  font-family:'Roboto',sans-serif;
-  font-weight:300;
+  padding: 5px;
+  border-radius: 50px;
   color:#000000;
   text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
   text-align:center;
-  transition: all 0.2s;
+  width: 60%;
+  height: 30px;
 }
-.myButton:hover {
-  border-color: rgb(200, 50, 50);
+.myButton1:hover {
+  border-color: var(--GrisMedio);
 }
 
+.myButton2 {
+  background-color:#ffb8a1;
+  padding: 5px;
+  border-radius: 50px;
+  color:#000000;
+  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+  text-align:center;
+  width: 30%;
+  height: 30px;
+ }
+ .myButton2:hover {
+   border-color: var(--GrisMedio);
 
+ }
+ .myButton {
+  background-color:#ffb8a1;
+   padding: 5px;
+   border-radius: 50px;
+   color:#000000;
+   text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+   text-align:center;
+   width: 65%;
+   height: 30px;
+   margin-top: 5px;
+   display:block;
+ }
+ .myButton:hover {
+   border-color: var(--GrisMedio);
+ }
 
 .botones button{
   width: 40%;
@@ -154,11 +221,6 @@ margin-left: 30%;
 
 }
 
-.myButton {
-  display:block;
-margin: 0px 30px 10px   auto;
- }
- 
 *{
 
   box-sizing: border-box;
@@ -207,7 +269,7 @@ margin: 0px 30px 10px   auto;
   }
 
   .home main .contenedor-precio-descuento {
-    padding: 20px 30px 40px 4px;
+    padding: 5px 0px 40px 4px;
     margin: 2%;
   }
   
@@ -224,13 +286,16 @@ margin-left: 38%;
   }
 
 
- 
-  .myButton{
-    margin-top: 14px;
-    padding: 2px;
-    margin-bottom: 10px;
+  .myButton1 {
+     width: 65%;
+   }
+   .myButton2 {
+    width: 32%;
   }
- 
+   .product-card img {
+    height: 62%;
+  }
+
 }
 
 
