--- a/sitio/src/views/index.ejs
+++ b/sitio/src/views/index.ejs
@@ -40,11 +40,11 @@
 
                                 <img src="/img/products/<%= product.image %>" width="100%" alt="">
                                 <div class="detail-product">
-
-                                    <a href="/products/cart" class="myButton">
-
-                                        <i class="fas fa-shopping-cart"></i> Añadir al carrito</a>
-
+                                    <div class="box-botones">
+                                        <a href="/products/cart" class="myButton1"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>
+                                        <a href="/products/detail/<%= product.id %>" class="myButton2">Ver Mas</a>
+                                    </div>
+                                    
                                     <h4>
                                         <%= product.name %>
                                     </h4>
@@ -71,7 +71,7 @@
 
 
 
-                                    <a href="/products/detail/<%= product.id %>" class="myButton">Ver Mas</a>
+                                    
                                 </div>
 
                             </article>
@@ -87,9 +87,10 @@
                                 <img src="/img/products/<%= product.image %>" width="100%" alt="">
                                 <div class="detail-product">
 
-                                    <a href="/products/cart" class="myButton">
-
-                                        <i class="fas fa-shopping-cart"></i> Añadir al carrito</a>
+                                    <div class="box-botones">
+                                        <a href="/products/cart" class="myButton1"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>
+                                        <a href="/products/detail/<%= product.id %>" class="myButton2">Ver Mas</a>
+                                    </div>
 
                                     <h4>
                                         <%= product.name %>
@@ -115,9 +116,6 @@
                                                 <% } %>
                                     </div>
 
-
-
-                                    <a href="/products/detail/<%= product.id %>" class="myButton">Ver Mas</a>
                                 </div>
 
                             </article>
@@ -133,10 +131,10 @@
                                 <img src="/img/products/<%= product.image %>" width="100%" alt="">
                                 <div class="detail-product">
 
-                                    <a href="/products/cart" class="myButton">
-
-                                        <i class="fas fa-shopping-cart"></i> Añadir al carrito</a>
-
+                                    <div class="box-botones">
+                                        <a href="/products/cart" class="myButton1"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>
+                                        <a href="/products/detail/<%= product.id %>" class="myButton2">Ver Mas</a>
+                                    </div>
                                     <h4>
                                         <%= product.name %>
                                     </h4>
@@ -161,9 +159,6 @@
                                                 <% } %>
                                     </div>
 
-
-
-                                    <a href="/products/detail/<%= product.id %>" class="myButton">Ver Mas</a>
                                 </div>
 
                             </article>
@@ -179,10 +174,10 @@
                                 <img src="/img/products/<%= product.image %>" width="100%" alt="">
                                 <div class="detail-product">
 
-                                    <a href="/products/cart" class="myButton">
-
-                                        <i class="fas fa-shopping-cart"></i> Añadir al carrito</a>
-
+                                    <div class="box-botones">
+                                        <a href="/products/cart" class="myButton1"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>
+                                        <a href="/products/detail/<%= product.id %>" class="myButton2">Ver Mas</a>
+                                    </div>
                                     <h4>
                                         <%= product.name %>
                                     </h4>
@@ -207,9 +202,6 @@
                                                 <% } %>
                                     </div>
 
-
-
-                                    <a href="/products/detail/<%= product.id %>" class="myButton">Ver Mas</a>
                                 </div>
 
                             </article>
