--- a/sitio/src/views/products.ejs
+++ b/sitio/src/views/products.ejs
@@ -16,7 +16,7 @@
 
                     <% products.forEach(product=>{ %>
 
-                        <article class="product-card">
+                        <article class="product-card-products">
                             <a href="/products/detail/<%= product.id %>">
                                 <img src="/img/products/<%= product.image %>" width="100%" alt="">
                                 <div class="detail-product">
@@ -26,7 +26,7 @@
                                 <i class="fas fa-shopping-cart"></i> Añadir al carrito
                             </a>
                             <a href="/products/detail/<%= product.id %>">
-                                <h4>
+                                <h4 class="products">
                                     <%= product.name %>
                                 </h4>
 
@@ -40,13 +40,13 @@
                                 <div class="contenedor-precio-descuento">
 
                                     <% if (product.discount> 0) { %>
-                                        <p class="precio"> $<%= toDiscount(product.price, product.discount) %>
+                                        <p class="precio-products"> $<%= toDiscount(product.price, product.discount) %>
                                         </p>
-                                        <p class="descuento"><i class="fas fa-user-tag"></i>
+                                        <p class="descuento-products"><i class="fas fa-user-tag"></i>
                                             % <%= product.discount%>
                                         </p>
                                         <% }else{ %>
-                                            <h2>$<%= toThousand(product.price) %>
+                                            <h2 class="products">$<%= toThousand(product.price) %>
                                             </h2>
                                             <% } %>
 
