--- a/sitio/src/views/login.ejs
+++ b/sitio/src/views/login.ejs
@@ -24,6 +24,10 @@
                     <label for="pass">Contraseña</label>
                     <input type="password" placeholder="" id="pass" name="password">
                 </div>
+                <div class="box-check">
+                    <input type="checkbox" id="remember" name="remember">
+                    <label for="remember">Recordame</label>
+                </div>
                 <div class="iniciar">
                     <button type="submit">Iniciar sesión</button>
                 </div>
