implementación de migration y seeder realizado

--- a/sitio/src/views/profile.ejs
+++ b/sitio/src/views/profile.ejs
@@ -40,10 +40,10 @@
 
                                             <div class="col-12 mb-4">
                                                 <div class="form-floating">
-                                                    <input type="tel" class="form-control" id="telefono" placeholder="Telefono" name="telefono" value="<%= user.telefono %>">
-                                                    <label for="telefono">Teléfono</label>
+                                                    <input type="tel" class="form-control" id="phone" placeholder="phone" name="phone" value="<%= user.phone %>">
+                                                    <label for="phone">Teléfono</label>
                                                 </div>
-                                                <span class="text-danger small ms-2"><%= locals.errors && errors.telefono ? errors.telefono.msg : null%> </span>
+                                                <span class="text-danger small ms-2"><%= locals.errors && errors.phone ? errors.phone.msg : null%> </span>
                                             </div>
 
                                             <div class="col-12 mb-2">
