--- a/sitio/src/views/register.ejs
+++ b/sitio/src/views/register.ejs
@@ -12,7 +12,7 @@
             <p>registrate</p>
             <form action="" method="POST">
                 <div class="box-form">
-                    <label class="nombreCompleto" for="nombre">Nombre y apellido</label>
+                    <label class="nombreCompleto" for="nombre">Nombre</label>
                     <input type="text" id="nombre" name="name">
                     <span class= "error"><%= locals.errores && errores.name ? errores.name.msg : null %></span>
                 </div>
@@ -22,9 +22,9 @@
                     <span class= "error"><%= locals.errores && errores.email ? errores.email.msg : null %></span>
                 </div>
                 <div class="box-form">
-                    <label class="telefono" for="telefono">telefono</label>
-                    <input type="tel" id="telefono" name="telefono">
-                    <span class= "error"><%= locals.errores && errores.telefono ? errores.telefono.msg : null %></span>
+                    <label class="phone" for="phone">Teléfono</label>
+                    <input type="tel" id="phone" name="phone">
+                    <span class= "error"><%= locals.errores && errores.phone ? errores.phone.msg : null %></span>
                 </div>
                 <div class="box-form">
                     <label for="pass">Contraseña</label>
