--- a/sitio/src/views/partials/header.ejs
+++ b/sitio/src/views/partials/header.ejs
@@ -2,8 +2,10 @@
     <div class="caja-superior">
         <a href="/"><img src="/img/Logo.png" alt=""></a>
         <div class="search">
-            <input placeholder=" Buscar... " type="search">
-            <i class="fas fa-search"></i>
+            <form action="/search" method="GET">
+            <input name="keywords" placeholder=" Buscar... " type="text">
+            <button class="search-form_button"type="submit"><i class="fas fa-search"></i></button>
+        </form>
         </div>
         <nav>
             <ul class="navbar">
