--- a/sitio/src/views/index.ejs
+++ b/sitio/src/views/index.ejs
@@ -33,62 +33,15 @@
 
                     <section>
 
-                        <h1>Tazas con frase</h1>
-                        <% products.forEach(product=>{ %>
-                            <% if (product.category === "Tazas con frase") { %>
+                        <h1>Ofertas</h1>
+                        <% ofertas.forEach(product=>{ %>
                             <article class="product-card">
 
                                 <img src="/img/products/<%= product.image %>" width="100%" alt="">
                                 <div class="detail-product">
                                     <div class="box-botones">
-                                        <a href="/products/cart" class="myButton1"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>
-                                        <a href="/products/detail/<%= product.id %>" class="myButton2">Ver Mas</a>
-                                    </div>
-                                    
-                                    <h4>
-                                        <%= product.name %>
-                                    </h4>
-
-                                    <div class="contenedor-precio-descuento">
-
-                                        <% if (product.discount> 0) { %>
-                                            <p class="precio">
-                                                <span class="precio">$<%= toThousand(product.price) %></span>
-                                                <br>
-                                                <b>
-                                                    <%= product.discount %>% OFF
-                                                </b>
-                                            </p>
-                                            <p class="precio-total">
-                                               $<%= toDiscount(product.price, product.discount) %>
-                                            </p>
-                                            <% }else{%>
-                                                <p class="precio-real">
-                                                   $<%= toThousand(product.price) %>
-                                                </p>
-                                                <% } %>
-                                    </div>
-
-
-
-                                    
-                                </div>
-
-                            </article>
-
-                            <% } %>
-                            <% }) %>
-
-                            <h1>Tazas de cerámica</h1>
-                        <% products.forEach(product=>{ %>
-                            <% if (product.category === "Tazas de cerámica") { %>
-                            <article class="product-card">
-
-                                <img src="/img/products/<%= product.image %>" width="100%" alt="">
-                                <div class="detail-product">
-
-                                    <div class="box-botones">
-                                        <a href="/products/cart" class="myButton1"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>
+                                        <a href="/products/cart" class="myButton1"><i class="fas fa-shopping-cart"></i>
+                                            Añadir al carrito</a>
                                         <a href="/products/detail/<%= product.id %>" class="myButton2">Ver Mas</a>
                                     </div>
 
@@ -107,113 +60,25 @@
                                                 </b>
                                             </p>
                                             <p class="precio-total">
-                                               $<%= toDiscount(product.price, product.discount) %>
+                                                $<%= toDiscount(product.price, product.discount) %>
                                             </p>
-                                            <% }else{%>
-                                                <p class="precio-real">
-                                                   $<%= toThousand(product.price) %>
-                                                </p>
-                                                <% } %>
                                     </div>
+                                    <% } %>
+
+
 
                                 </div>
 
                             </article>
 
-                            <% } %>
+
                             <% }) %>
 
-                            <h1>Teteras</h1>
-                        <% products.forEach(product=>{ %>
-                            <% if (product.category === "Teteras") { %>
-                            <article class="product-card">
-
-                                <img src="/img/products/<%= product.image %>" width="100%" alt="">
-                                <div class="detail-product">
-
-                                    <div class="box-botones">
-                                        <a href="/products/cart" class="myButton1"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>
-                                        <a href="/products/detail/<%= product.id %>" class="myButton2">Ver Mas</a>
-                                    </div>
-                                    <h4>
-                                        <%= product.name %>
-                                    </h4>
-
-                                    <div class="contenedor-precio-descuento">
-
-                                        <% if (product.discount> 0) { %>
-                                            <p class="precio">
-                                                <span class="precio">$<%= toThousand(product.price) %></span>
-                                                <br>
-                                                <b></i>
-                                                    <%= product.discount %>% OFF
-                                                </b>
-                                            </p>
-                                            <p class="precio-total">
-                                               $<%= toDiscount(product.price, product.discount) %>
-                                            </p>
-                                            <% }else{%>
-                                                <p class="precio-real">
-                                                   $<%= toThousand(product.price) %>
-                                                </p>
-                                                <% } %>
-                                    </div>
+                                <div class="botones">
+                                    <button type="reset" id="reset"><a href="/products"> Ver más productos</a></button>
 
                                 </div>
-
-                            </article>
-
-                            <% } %>
-                            <% }) %>
-
-                            <h1>Azucareras</h1>
-                        <% products.forEach(product=>{ %>
-                            <% if (product.category === "Azucareras") { %>
-                            <article class="product-card">
-
-                                <img src="/img/products/<%= product.image %>" width="100%" alt="">
-                                <div class="detail-product">
-
-                                    <div class="box-botones">
-                                        <a href="/products/cart" class="myButton1"><i class="fas fa-shopping-cart"></i> Añadir al carrito</a>
-                                        <a href="/products/detail/<%= product.id %>" class="myButton2">Ver Mas</a>
-                                    </div>
-                                    <h4>
-                                        <%= product.name %>
-                                    </h4>
-
-                                    <div class="contenedor-precio-descuento">
-
-                                        <% if (product.discount> 0) { %>
-                                            <p class="precio">
-                                                <span class="precio">$<%= toThousand(product.price) %></span>
-                                                <br>
-                                                <b></i>
-                                                    <%= product.discount %>% OFF
-                                                </b>
-                                            </p>
-                                            <p class="precio-total">
-                                               $<%= toDiscount(product.price, product.discount) %>
-                                            </p>
-                                            <% }else{%>
-                                                <p class="precio-real">
-                                                   $<%= toThousand(product.price) %>
-                                                </p>
-                                                <% } %>
-                                    </div>
-
-                                </div>
-
-                            </article>
-
-                            <% } %>
-                            <% }) %>
-                        </section>
-                    
-                    <div class="botones">
-                        <button type="reset" id="reset"><a href="/products"> Ver Más Productos</a></button>
-
-                    </div>
+                    </section>
                 </main>
 
                 <%- include('partials/footer') %>
